--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
     <header class="header">
-    <img src="my photo.jpg" alt="avatar" width="250" height="250" />
+    <img src="images/myphoto.jpg" alt="avatar" width="250" height="250" />
     
     <div class="right-side">
     <nav class="navbar">
@@ -75,7 +75,7 @@
     
     <footer class="footer">
     <div><a href="https://vilechuy.github.io/rsschool-cv/cv">Github</a></div>
-    <div><a href="https://rs.school/js"><img src="LOGO-RS-SCHOOL.png" alt="logo-rs-school"
+    <div><a href="https://rs.school/js"><img src="images/LOGO-RS-SCHOOL.png" alt="logo-rs-school"
     width="150" height="150" /></a></div>
     <div>2022</div>
     </footer>
